# IEE_copilot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  PRD.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml  原始方案.md
.codex/environments/: environment.toml
apps/api/: Dockerfile  alembic.ini
apps/api/alembic/: env.py
apps/api/app/: main.py
apps/api/tests/: conftest.py  test_alphafold_connector.py  test_auth_projects.py  test_cache.py  test_conservation_service.py  test_curated_evidence_import.py  test_demo_science_config.py  test_enzyme_data_connector.py  test_enzyme_records.py  test_errors.py  test_exact_matching.py  test_experiment_import.py  test_experiment_visibility.py  test_health.py  test_homology_pipeline.py  test_jobs.py  test_library_design.py  test_literature_connector.py  test_models.py  test_msa_runner.py  test_msa_service.py  test_mutation_parser.py  test_mutation_scoring.py  test_pdb_discovery.py  test_property_ranking.py  test_property_standardization.py  test_query_resolver.py  test_rcsb_connector.py  test_residue_features.py  test_rosetta_runner.py  test_science_provenance.py  test_search_flow.py  test_sequence_similarity_wrapper_script.py  test_similarity_matching.py  (+2 more)
apps/web/: Dockerfile  next.config.mjs  package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/worker/: Dockerfile
data/demo/: homologs.fasta
docker/: README.md
docs/: index.html
docs/prototype/: p0-prototype.html
scripts/seed/: seed.py
scripts/similarity/: sequence_similarity_wrapper.py
tests/integration/: test_compose_contract.md
(+109 files in other folders)
